addind some changes to the decision step

--- a/cpp/robo/CMakeLists.txt
+++ b/cpp/robo/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories( perception/ )
 add_executable( sample_1.out sample_1.cpp )
 add_executable( sample_2.out sample_2.cpp )
 add_executable( main.out main.cpp )
+add_executable( sample_socketio main_socketio.cpp )
 
 target_link_libraries( sample_1.out ${OpenCV_LIBS} )
 target_link_libraries( sample_2.out ${OpenCV_LIBS} )
