--- a/cpp/robo/CMakeLists.txt
+++ b/cpp/robo/CMakeLists.txt
@@ -4,14 +4,15 @@ project( roboPerceptionCpp C CXX )
 
 set( CMAKE_BUILD_TYPE Debug )
 
-find_package( OpenCV REQUIRED )
+#find_package( OpenCV REQUIRED )
+find_package( OpenCV COMPONENTS opencv_core opencv_highgui opencv_imgproc REQUIRED )
 
 include_directories( perception/ )
 
 add_executable( sample_1.out sample_1.cpp )
 add_executable( sample_2.out sample_2.cpp )
 add_executable( main.out main.cpp )
-add_executable( sample_socketio main_socketio.cpp )
+#add_executable( sample_socketio main_socketio.cpp )
 
 target_link_libraries( sample_1.out ${OpenCV_LIBS} )
 target_link_libraries( sample_2.out ${OpenCV_LIBS} )
